fix css for label to not overflow (#3733)

--- a/src/src/routes/Menu/Recipe/VariantRecipeList/VariantRecipeListItem/VariantRecipeListItem.css
+++ b/src/src/routes/Menu/Recipe/VariantRecipeList/VariantRecipeListItem/VariantRecipeListItem.css
@@ -66,7 +66,7 @@
     cursor: pointer;
     margin: 0;
     display: flex;
-    width: 100%;
+    width: calc(100% - 1.5rem);
     justify-content: space-between;
     line-height: 1.3;
     margin-left: 0.25rem
